--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.3.0",
     "@react-native-firebase/auth": "^8.3.1",
@@ -17,6 +18,7 @@
     "@react-navigation/stack": "^5.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
