--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,6 +131,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.friendschallenge"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
