--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-image-picker": "^2.3.3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-native-video": "^5.1.0-alpha7"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
