--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.3.0",
     "@react-native-firebase/auth": "^8.3.1",
-    "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-image-picker": "^2.3.3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1"
