--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.3.0",
     "@react-native-firebase/auth": "^8.3.1",
+    "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-fbsdk": "^2.0.0",
     "react-native-axios": "^0.17.1",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-picker": "^2.3.3",
+    "react-native-material-ui": "^1.30.1",
+    "react-native-materialui-textfield": "^0.13.2",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
