pruebas de librerias

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,10 @@ android {
 
     defaultConfig {
         applicationId "com.friendschallenge"
+        multiDexEnabled true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
     }
