--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.2.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-axios": "^0.17.1",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.3",
-    "react-native-material-ui": "^1.30.1",
-    "react-native-materialui-textfield": "^0.13.2",
+    "react-native-material-textfield": "*",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1",
