--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-axios": "^0.17.1",
+    "react-native-elements": "^2.2.1",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.3",
