--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.0",
     "@react-native-community/datetimepicker": "^3.0.1",
     "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.10",
@@ -18,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.2.1",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
