Generacion de nueva publicacion

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'FriendsChallenge' do
 
   pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'FriendsChallengeTests' do
     inherit! :complete
     # Pods for testing
