--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-elements": "^2.2.1",
     "react-native-fbsdk": "^2.0.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-image-picker": "^2.3.3",
@@ -33,8 +34,8 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1",
-    "react-native-video": "^5.1.0-alpha7",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-video": "^5.1.0-alpha7"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
