--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-elements": "^2.2.1",
     "react-native-fbsdk": "^2.0.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.26.2",
