--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "react-native": "0.63.2",
     "react-native-axios": "^0.17.1",
     "react-native-elements": "^2.2.1",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-image-picker": "^2.3.3",
-    "react-native-material-textfield": "*",
+    "react-native-material-textfield": "github:n4kz/react-native-material-textfield#729008b847eb38129d0b886e98253d4c11f6d4d3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1",
-    "react-native-video": "^5.1.0-alpha7",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-video": "^5.1.0-alpha7"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
