--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-axios": "^0.17.1",
+    "react-native-camera": "^3.40.0",
     "react-native-elements": "^2.2.1",
     "react-native-fbsdk": "^2.0.0",
     "react-native-fetch-blob": "^0.10.8",
