--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.0",
     "@react-native-community/checkbox": "^0.5.0",
     "@react-native-community/datetimepicker": "^3.0.1",
     "@react-native-community/google-signin": "^3.0.4",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.10.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha7",
     "react-native-video-player": "^0.10.1"
