--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-native-camera": "^3.40.0",
     "react-native-elements": "^2.2.1",
     "react-native-fbsdk": "^2.0.0",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.26.2",
@@ -42,7 +41,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha7",
-    "react-native-video-player": "^0.10.1"
+    "react-native-video-player": "^0.10.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
