--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha7",
-    "react-native-video-player": "^0.10.1"
+    "react-native-video-player": "^0.10.1",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
