--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha7",
     "react-native-video-player": "^0.10.1",
-    "rn-fetch-blob": "^0.12.0",
-    "ws": "^7.3.1"
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
