--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-image-picker": "^2.3.3",
     "react-native-material-textfield": "github:n4kz/react-native-material-textfield#729008b847eb38129d0b886e98253d4c11f6d4d3",
+    "react-native-modal": "^11.5.6",
     "react-native-parsed-text": "0.0.22",
     "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "^1.10.1",
