--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-player": "^0.10.1",
+    "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
