--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^1.3.4",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-player": "^0.10.1",
