--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "@reduxjs/toolkit": "^1.4.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-native": "^3.10.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -48,6 +50,9 @@
     "react-native-video-player": "^0.10.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
+    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0"
   },
