--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "react-native-image-picker": "^2.3.4",
+    "react-hook-form": "^6.11.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
