--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "postinstall": "patch -p1 -i patches/react-native-material-textfield+0.16.1.patch"
   },
   "dependencies": {
+    "@jesster2k10/react-native-range-slider": "^0.3.1",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/datetimepicker": "^3.0.3",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^8.4.5",
     "@react-native-firebase/auth": "^9.2.7",
     "@react-navigation/bottom-tabs": "^5.9.1",
