--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-hook-form": "^6.11.5",
     "react-native": "^0.63.3",
     "react-native-axios": "^0.17.1",
     "react-native-camera": "^3.40.0",
     "react-native-date-picker": "^3.2.3",
     "react-native-fbsdk": "^2.0.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
     "react-native-parsed-text": "^0.0.22",
@@ -54,9 +57,7 @@
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0",
-    "react-native-image-picker": "^2.3.4",
-    "react-hook-form": "^6.11.5"
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
