--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "postinstall": "patch -p1 -i patches/react-native-material-textfield+0.16.1.patch"
   },
   "dependencies": {
-    "@jesster2k10/react-native-range-slider": "^0.3.1",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/datetimepicker": "^3.0.3",
@@ -56,7 +55,8 @@
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "rn-range-slider": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
