--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.59.0",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
