--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-slick": "^1.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^1.3.4",
     "react-native-vector-icons": "^7.1.0",
