--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.0",
     "react-native-image-picker": "^2.3.4",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.6",
     "react-native-parsed-text": "^0.0.22",
