--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator 'Iphone 6s'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
@@ -50,7 +50,7 @@
     "react-native-screens": "^2.11.0",
     "react-native-slick": "^1.6.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-toast-message": "^1.3.4",
+    "react-native-toast-message": "^1.3.7",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-player": "^0.10.1",
