--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-native": "^3.10.0",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
