--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "react-native-video-player": "^0.10.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8",
+    "@react-native-community/async-storage": "~1.12.0",
+    "redux-persist": "^6.0.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-range-slider": "^2.0.3"
   },
